# efficient-mt-tagalo

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: lora_default.yaml  paths.yaml
notebooks/: 01_data_overview.ipynb
scripts/: run_eval.sh  run_train.sh
src/evaluation/: eval_metrics.py
src/models/: lora_adapter.py
src/utils/: config.py
