[tool.poetry]
name = "efficient-mt-tagalog"
version = "0.1.0"
description = "Efficient LoRA fine-tuning of NLLB-200 to Tagalog"
authors = ["Vicente Pareja <vicente@omicspath.ai>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.3.0"
transformers = "4.41.0"
sentencepiece = "0.2.0"
peft = "0.11.1"
sacrebleu = "2.4.3"
accelerate = "0.29.3"
datasets = "2.19.0"
hydra-core = "1.3.3"

[tool.poetry.group.dev.dependencies]
black = "24.4.2"
ruff = "0.4.5"
isort = "5.13.2"
pre-commit = "3.6.2"
pytest = "8.1.1"
nbstripout = "0.6.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"